start tasks refactor
